# oellm-arena

./: .gitignore  README.md  app.py  arena_results.csv  backend.py  backend_benchmark_results.csv  benchmark_backend.py  config.py  main.py  pyproject.toml  requirements.txt  test_danish_model.py
scripts/: generate_readme_plots.py  stress_test_gpu.py
tests/: test_backend.py  test_config.py  test_gpu_integration.py  test_swedish_integration.py
